GUI controller code organization, size expansion